# scip-cli

./: .gitignore  AGENTS.md  Cargo.toml  README.md  wrangler.jsonc
.github/: projects.json
.github/projects/: brotli.yaml  c-ares.yaml  dav1d.yaml  double-conversion.yaml  expat.yaml  freetype.yaml  harfbuzz.yaml  jsoncpp.yaml  leveldb.yaml  libevent.yaml  libjpeg-turbo.yaml  libpng.yaml  libtiff.yaml  libwebp.yaml  libxml2.yaml  libyuv.yaml  linux.yaml  lz4.yaml  minizip-ng.yaml  nghttp2.yaml  nginx.yaml  opus.yaml  snappy.yaml  sqlite.yaml  v8.yaml  webrtc.yaml  woff2.yaml  yaml-cpp.yaml  zlib.yaml  zstd.yaml
.github/projects/brotli/: build.sh  project.json
.github/projects/freetype/: build.sh  project.json
.github/projects/harfbuzz/: build.sh  project.json
.github/scripts/: assemble-site.sh  build-cmake-project.sh  build-project.sh  plan-projects.sh  restore-state.sh
.github/workflows/: code-browser.yml  project-build.yml  zlib-pages.yml
.skill/add-project/: SKILL.md
assets/: app.js  index.html  style.css
configs/: abseil.yaml  angle.yaml  boringssl.yaml  brotli.yaml  dawn.yaml  ffmpeg.yaml  freetype.yaml  harfbuzz.yaml  icu.yaml  libjpeg-turbo.yaml  libpng.yaml  libtiff.yaml  libwebp.yaml  llvm-project.yaml  nginx.yaml  opus.yaml  php.yaml  protobuf.yaml  python.yaml  skia.yaml  v8.yaml  webrtc.yaml  zlib.yaml
configs/bases/: cmake-ninja.yaml  configure-make.yaml
docs/: html.md  llm-function-docs-plan.md
src/: config.rs  function_docs.rs  generator.rs  lib.rs  main.rs  site.rs  template.rs
worker/: r2-data.js  r2-data.test.mjs
(+14 files in other folders)
