[package]
name = "scip-cli"
version = "0.1.0"
edition = "2024"
description = "Generate SCIP indexes and publish them as a static multi-project code browser"
license = "MIT"
default-run = "scip-cli"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
protobuf = "=3.7.2"
scip = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
url = "2.5"

[dev-dependencies]
tempfile = "3.20"
