[package]
name = "scip-cli"
version = "0.1.0"
edition = "2024"
description = "Convert a SCIP index into a static code browser"
license = "MIT"
default-run = "scip-cli"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
protobuf = "=3.7.2"
scip = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"

[dev-dependencies]
tempfile = "3.20"
